Prepare for new structure

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,9 @@ codealike.json
 *.nuget.g.targets
 project.lock.json
 project.assets.json
-.vs/*
-.vscode/*
-bin/*
-obj/*
+.vs/
+bin/
+obj/
 .vscode/
 appsettings.*.json
 appsettings.json
